# Cubesat-Robotic-Arm

./: .gitignore  .gitmodules  Dockerfile  Makefile  docker-compose.yml  local_installer.sh
arm_commander/: CMakeLists.txt
arm_control/: package.xml
arm_description/: CMakeLists.txt  README.md  package.xml
arm_description/launch/: controller.launch  controller.yaml  display.launch  display.launch.py  gazebo.launch  gazebo.launch.py
arm_description/meshes/: Arm_Pin_v8_1.stl  Arm_Rotation_Pin_v3_1.stl  End_Effector_v4_1.stl  Rotation_Pin_v8_1.stl  Spit_Lower_Link_Bottom_v4_1.stl  Spit_Lower_Link_Top_v5_1.stl  U_Joint_v4_1 (3).stl  U_Joint_v4__1__1.stl  U_joint_Pin_v9_1.stl  U_joint_Pin_v9__1__1.stl  Upper_Link_v13_1.stl  base_link.stl
arm_description/urdf/: Arm.gazebo  Arm.trans  Arm.xacro
arm_msgs/: package.xml
pi_zero_control/: CMakeLists.txt  package.xml
radio_transceiver/: CMakeLists.txt
src/arm_commander/: CMakeLists.txt  package.xml
src/arm_commander/include/arm_commander/: ArmCommanderNode.hpp
src/arm_commander/launch/: arm_commander.launch.py
src/arm_commander/src/: ArmCommanderNode.cpp  main.cpp
src/arm_msgs/: CMakeLists.txt  package.xml
src/arm_msgs/msg/: ArmCommand.msg  ArmStatus.msg  GpsStatus.msg  HeartbeatStatus.msg  ImageData.msg  ImageRequest.msg  RadioParametersCommand.msg
src/bringup/: CMakeLists.txt  package.xml
src/bringup/launch/: jetson_bringup.launch.py  pi_bringup.launch.py
src/camera_handler/: CMakeLists.txt  package.xml
src/camera_handler/launch/: camera.launch.xml
src/image_compressor/: CMakeLists.txt  package.xml
src/image_compressor/src/: ImageCompressorNode.cpp  main.cpp
src/image_handler/: CMakeLists.txt  package.xml
src/image_handler/include/image_compressor/: ImageHandlerNode.hpp
src/image_handler/include/image_handler/: ImageHandlerNode.hpp
src/image_handler/launch/: camera.launch.py  image_handler.launch.py
src/image_handler/src/: ImageHandlerNode.cpp  main.cpp
src/nmea_listener/: CMakeLists.txt
src/nmea_listener/include/nmea_listener/: NmeaListenerNode.hpp
src/nmea_listener/src/: NmeaListenerNode.cpp
src/radio_transceiver/: CMakeLists.txt  package.xml
src/radio_transceiver/include/radio_transceiver/: RadioTransceiverNode.hpp
src/radio_transceiver/src/: RadioTransceiverNode.cpp  main.cpp
src/sensor_reader/: CMakeLists.txt
src/sensor_reader/include/sensor_reader/: SensorReaderNode.hpp  adxl375.hpp  ina260.hpp
src/sensor_reader/src/: SensorReaderNode.cpp  adxl375.cpp  ina260.cpp  main.cpp
src/status_accumulator/: CMakeLists.txt  package.xml
src/status_accumulator/include/status_accumulator/: StatusAccumulatorNode.hpp
src/status_accumulator/launch/: status_accumulator.launch.py
src/status_accumulator/src/: StatusAccumulatorNode.cpp  main.cpp
src/stm_interface/: CMakeLists.txt  package.xml
src/stm_interface/include/stm_interface/: StmInterfaceNode.hpp
src/stm_interface/src/: StmInterfaceNode.cpp  main.cpp
utils/: compile_commands_compiler.py
