<?xml version="1.0"?>
<package format="3">
  <name>bringup</name>
  <version>0.0.0</version>
  <description>System bringup for Cubesat robotic arm nodes.</description>
  <maintainer email="todo@example.com">TODO</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>arm_commander</exec_depend>
  <exec_depend>status_accumulator</exec_depend>
  <exec_depend>sensor_reader</exec_depend>
  <exec_depend>nmea_listener</exec_depend>
  <exec_depend>radio_transceiver</exec_depend>
  <exec_depend>image_handler</exec_depend>
  <exec_depend>gscam2</exec_depend>
  <exec_depend>libcamera_ros_driver</exec_depend>

  <export/>
</package>
